--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.inline-list li {
+  display: inline-block;
+  margin-right: 10px;
+  font-size: 14px;
+}
