refactor styles and update test

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -9,7 +9,7 @@
 }
 
 .app-logo {
-  height: 20vmin;
+  height: 160px;
   pointer-events: none;
   background-color: #fff;
 }
@@ -24,7 +24,7 @@
 .inline-list li {
   display: inline-block;
   margin-right: 10px;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 @-webkit-keyframes spinner {
