--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -30166,6 +30166,8 @@ video {
   margin-right: auto;
   height: 100%;
   overflow-y: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
