--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -6,7 +6,7 @@
 @use postcss-nested;
 
 .container {
-  @apply h-full overflow-y-auto py-16 mx-auto;
+  @apply h-full overflow-y-auto py-16 mx-auto px-4;
 }
 
 .btn {
