--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -28,3 +28,30 @@
 .app-header {
   @apply py-10;
 }
+
+/*
+table
+*/
+.table-wrapper {
+  @apply flex flex-col shadow overflow-hidden border-b border-gray-200 sm:rounded-lg overflow-x-auto;
+}
+
+.table {
+  @apply min-w-full divide-y divide-gray-200;
+}
+
+.table-thead {
+  @apply min-w-full divide-y divide-gray-200;
+}
+
+.table-th {
+  @apply px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider;
+}
+
+.table-tbody {
+  @apply bg-white divide-y divide-gray-200;
+}
+
+.table-td {
+  @apply px-6 py-4 whitespace-nowrap;
+}
